--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,26 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <!-- Set AppCompat’s actionBarStyle -->
+        <item name="actionBarStyle">@style/ActionBarTheme</item>
+
+        <!-- Set AppCompat’s color theming attrs -->
+        <item name="colorPrimary">@color/my_awesome_red</item>
+        <item name="colorPrimaryDark">@color/my_awesome_dark_red</item>
+        <item name="colorControlNormal">@android:color/white</item>
+
+    </style>
+
+    <style name="ActionBarTheme" parent="Widget.AppCompat.Toolbar">
+
+        <item name="color">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <!--<item name="colorControlNormal">?actionBarIconColor</item>-->
+        <!--<item name="actionButtonStyle">@style/ActionBar.ActionButton</item>-->
+        <item name="selectableItemBackground">?android:selectableItemBackground</item>
+        <item name="selectableItemBackgroundBorderless">?android:selectableItemBackground</item>
+        <!--<item name="colorControlHighlight">@color/colorSecondary</item>-->
     </style>
 
 </resources>
