--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -9,7 +9,7 @@
 
     <TextView
         style="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/nameText"
+        android:id="@+id/nameEdit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,7 +17,7 @@
 
     <TextView
         style="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/weightText"
+        android:id="@+id/weightEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="[weight]" />
