--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,9 @@
         <item name="colorPrimary">@color/my_awesome_red</item>
         <item name="colorPrimaryDark">@color/my_awesome_dark_red</item>
         <item name="colorControlNormal">@android:color/white</item>
+        <!--<item name="colorAccent">@color/my_awesome_red</item>-->
+        <!--<item name="colorControlActivated">@color/my_awesome_red</item>-->
+        <!--<item name="colorControlHighlight">@color/my_awesome_red</item>-->
 
     </style>
 
@@ -23,4 +26,12 @@
         <!--<item name="colorControlHighlight">@color/colorSecondary</item>-->
     </style>
 
+    <style name="DialogButtonBar" parent="Widget.AppCompat.ButtonBar">
+        <item name="android:gravity">right</item>
+    </style>
+    <style name="DialogButton" parent="Base.Widget.AppCompat.Button.Borderless">
+    </style>
+    <style name="DialogButton.Primary">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
 </resources>
