--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/min_touch_slop"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:minHeight="@dimen/min_touch_slop"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    tools:background="#eee"
+    tools:ignore="RtlHardcoded,RtlSymmetry">
 
     <TextView
-        style="@style/TextAppearance.AppCompat.Large"
         android:id="@+id/nameEdit"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="[name]" />
+        tools:text="[name]"/>
 
     <TextView
-        style="@style/TextAppearance.AppCompat.Large"
         android:id="@+id/weightEdit"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="[weight]" />
+        tools:text="[weight]"/>
 
     <ImageButton
-        style="@style/ImageButton.Secondary"
         android:id="@+id/menuButton"
+        style="@style/ImageButton.Secondary"
         android:layout_width="@dimen/min_touch_slop"
         android:layout_height="@dimen/min_touch_slop"
-        android:src="@drawable/ic_more_vert_black_24dp"
-        android:contentDescription="@string/menu_open" />
+        android:contentDescription="@string/menu_open"
+        android:src="@drawable/ic_more_vert_black_24dp"/>
 
 </LinearLayout>
