--- a/app/src/main/res/layout/fragment_exercise_dialog.xml
+++ b/app/src/main/res/layout/fragment_exercise_dialog.xml
@@ -1,28 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".features.exercise.ExerciseDialog">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              tools:background='#eee'
+              tools:context=".features.exercise.ExerciseDialog">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/nameEdit"
-            android:layout_width="0dp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nameInput"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/exercise_name_hint" />
+            android:hint="@string/exercise_name_hint">
 
-        <EditText
-            android:id="@+id/weightEdit"
-            android:layout_width="100dp"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/nameEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/weightInput"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/exercise_weight_hint"
-            android:inputType="numberDecimal" />
+            android:hint="@string/exercise_weight_hint">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/weightEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"/>
+
+        </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 
@@ -36,14 +50,14 @@
             style="@style/DialogButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@android:string/cancel" />
+            android:text="@android:string/cancel"/>
 
         <Button
             android:id="@+id/saveButton"
             style="@style/DialogButton.Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@android:string/ok" />
+            android:text="@android:string/ok"/>
 
     </LinearLayout>
 
