--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,22 @@
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         tools:ignore="Overdraw"/>
 
-    <fragment
-        android:id="@+id/exercisesFragment"
-        android:name="alobar.workout.features.exercise.ExercisesFragment"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_exercises"/>
+        android:layout_height="match_parent">
 
+        <ListView
+            android:id="@+id/exerciseList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/emptyView"
+            style="@style/TextAppearance.AppCompat.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/fragment_exercises_empty_text"/>
+
+    </FrameLayout>
 </LinearLayout>
