--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -74,7 +74,7 @@
                     style="@style/DialogButton.Primary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/exercise_add"/>
+                    android:text="@string/exercise_save"/>
 
             </LinearLayout>
 
