--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,9 @@
         <item name="actionBarStyle">@style/ActionBarTheme</item>
 
         <!-- Set AppCompat’s color theming attrs -->
-        <item name="colorPrimary">@color/my_awesome_red</item>
-        <item name="colorPrimaryDark">@color/my_awesome_dark_red</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorControlNormal">@android:color/white</item>
-        <!--<item name="colorAccent">@color/my_awesome_red</item>-->
-        <!--<item name="colorControlActivated">@color/my_awesome_red</item>-->
-        <!--<item name="colorControlHighlight">@color/my_awesome_red</item>-->
 
     </style>
 
