Refactoring, linting, spelling

--- a/app/src/main/res/values/alphas.xml
+++ b/app/src/main/res/values/alphas.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="UnusedResources">
 
-    <!-- Values from Material desgin guidelines
+    <!-- Values from Material design guidelines
          http://www.google.com/design/spec/style/color.html#color-ui-color-application -->
     <item name="alpha_light_secondary" format="float" type="dimen">0.7</item>
     <item name="alpha_light_disabled" format="float" type="dimen">0.3</item>
